<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.role.RoleFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="40dp"
        android:gravity="top"
        android:text="@string/helper_type_screen_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize_navigation_title"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_shopping"
        style="@style/ListButtonExtraLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helper_type_button_shopping" />

    <Button
        android:id="@+id/button_transcript"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        style="@style/ListButtonExtraLarge"
        android:text="@string/helper_type_button_transcript" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>